# CommerceForceClaude

./: .gitignore  Instructions2Addnewtsx.txt  deploy.sh  docker-compose.yml  package-lock.json  start.ps1  stop.ps1  test_commerceforce.db  test_comprehensive.py
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  delete_products.py  find_orphan_priced_variants.py  init_db.py  pyproject.toml  reconcile_variant_stock.py  reset_superadmin_password.py  seed-data.json  seed.py  test_barcode_and_images.py  test_csv_features.py  test_inventory_transfer.py  test_media_folders.py  test_plugin_combinations.py  test_product_csv_images.py  test_variant_csv.py
backend/alembic/: env.py
backend/alembic/versions/: 0624e7a31203_initial_schema.py  3c0a6bde54df_add_password_reset_tokens.py  5a874f25caca_add_contact_plugin_and_trade_fields.py  62d9c03455e5_add_scheduling.py  808038705490_journal_provider_nullable.py  90394a6d235f_add_email_verification_to_users.py  a0b1c2d3e4f5_backfill_product_variant_tables.py  a1b2c3d4e5f6_add_shipping.py  a35a00f107db_add_order_fulfillment_fields.py  a3b4c5d6e7f8_add_tax_zones.py  a7f1c3e9b2d4_replace_landing_sections.py  a9b8c7d6e5f4_add_bank_transfer_and_paypal_payment_methods.py  b1c2d3e4f5a6_add_addresses_wishlist_reviews.py  b2c3d4e5f6a7_add_stripe_key_to_branding.py  b5c6d7e8f9a0_add_analytics_ids_to_branding.py  c1d2e3f4a5b6_add_discount_rules.py  c6d7e8f9a0b1_add_cart_recovery_fields.py  c8d9e0f1a2b3_add_variant_price_adjustment.py  d1e2f3a4b5c6_add_announcements.py  d2e3f4a5b6c7_add_chat_sessions_messages.py  d7e8f9a0b1c2_add_gdpr_deletion_requests.py  e2f3a4b5c6d7_add_variant_id_to_product_images.py  e3f4a5b6c7d8_add_session_key_unique.py  e5f6a7b8c9d0_add_stock_quantity_to_product_variants.py  f2a3b4c5d6e7_add_barcode_to_products.py  f3e2d1c0b9a8_add_block_section_type.py  f4a5b6c7d8e9_add_theme_colors_to_branding.py
backend/app/: main.py
backend/app/core/: base_model.py  config.py  database.py  dependencies.py  landing_config.py  plugin_registry.py  security.py
backend/app/plugins/addresses/: __init__.py  manifest.py  models.py  router.py  schemas.py  service.py
backend/app/plugins/ai_chat/: __init__.py  manifest.py  models.py  router.py  schemas.py  service.py
backend/app/plugins/auth/: __init__.py  (+5 more)
backend/app/routers/: media.py
backend/app/shared/: abandoned_cart.py  currency.py  email.py  exceptions.py  pagination.py  slug.py
backend/tests/: conftest.py  test_abandoned_cart.py  test_admin_order_email.py  test_auth.py  test_b2b.py  test_cancellation_effects.py  test_checkout_deferral.py  test_commerce.py  test_concurrent.py  test_content.py  test_coupon_per_user.py  test_currency.py  test_e2e_journey.py  test_email_verification.py  test_explicit_checkout.py  test_gdpr.py  test_landing_config_helper.py  test_landing_content.py  test_marketing.py  test_order_lifecycle.py  test_order_tracking.py  test_pagination.py  test_scheduling.py  test_scheduling_concurrent.py  test_security_fixes.py  test_shipping.py  test_stability_fixes.py  test_storefront_fixes.py  test_tax.py  test_tax_checkout.py  test_variant_images.py  test_variants.py
backend/tests/fixtures/: test_landing_config.json
(+446 files in other folders)
