[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commerceforce"
version = "0.1.0"
description = "CommerceForce — headless modular e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "anthropic>=0.109.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes (undefined names, unused imports, undefined names)
    "ASYNC", # flake8-async (async anti-patterns)
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",      # line too long — not enforced
    "E402",      # module import not at top — sometimes needed after side-effectful imports
    "E711",      # comparison to None — needed for SQLAlchemy query expressions
    "E712",      # comparison to True/False — needed for SQLAlchemy query expressions
    "E741",      # ambiguous variable name — l/O/I are fine in short-lived contexts
    "ASYNC240",  # os.path in async — trio/anyio rule only, we use asyncio
    "RUF001",    # ambiguous unicode character in string — false positives in error messages
    "RUF003",    # ambiguous unicode character in comment — not relevant
    "RUF005",    # list concatenation — style preference, not a bug
    "RUF100",    # unused noqa directive — too noisy during cleanup
    "RUF059",    # unused argument in function — too strict for this codebase
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
